gccida/g2/insn_default_length
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:550:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:552:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 356, "insn_default_length"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:552:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 356, "insn_default_length"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:740:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !register_operand( recog_data_0.operand[0], DImode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:753:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !register_operand( recog_data_0.operand[0], SImode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/insn-attrtab.c:767:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !register_operand( recog_data_0.operand[0], VOIDmode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insn_default_length/src/obj/insn-attrtab.o] Error 1
